# Spring-2024-Embedded-Systems-Programming

./: .gitignore  Assignment_1_Process.md  README.md
Assignments/1/Part 2/: Dockerfile  makehello
Assignments/1/Part 3/: CMake.dockerfile
Assignments/Building_a_toolchain/: CLibrariesOverview.md  CMakeLists.txt  SharedLibraries.md  ar-toolchain-bash.dockerfile  ar-toolchain-cmake.dockerfile  arithmetic.c  build.sh  cpparithmetic.cpp  example
Assignments/Building_a_toolchain/libdouble/: lib_double_instructions.md  mul_double.cpp
Assignments/Building_a_toolchain/libint/: add_int.c  div_int.c  int_arithmetic.h
Assignments/Docker_Simple_App/: Assignment_1_Process.md
Assignments/Docker_Simple_App/1.1/: python.dockerfile
Assignments/Docker_Simple_App/1.2/: Makefile  Makerfile.dockerfile
Assignments/Docker_Simple_App/1.3/: CMake.dockerfile  CMakeLists.txt
Assignments/Static_Libraries/: CMakeLists.txt  Makefile  arithmetic-CPP.cpp  arithmetic.c  arithmetic.dockerfile  build.sh
Assignments/Static_Libraries/libdouble/: add_double.cpp  double_arithmetic.h  example  main.c  main.cpp
Assignments/Static_Libraries/libint/: add_int.c  div_int.c  example  int_arithmetic.h  main.c  mul_int.c  sub_int.c
Assignments/cross_compiling/: Makefile
Assignments/cross_compiling_pt_1/: CMakeLists.txt  hello_world.cpp
Assignments/cross_compiling_pt_2/: Arithmetic  CMakeLists.txt  ReCompile.sh  arithmetic  build.sh
Assignments/cross_compiling_pt_2/libdouble/: div_double.cpp
Assignments/cross_compiling_pt_3/: Arithmetic  CMakeLists.txt  ReCompile.sh  arithmetic-CPP.cpp  build.sh
Assignments/cross_compiling_pt_3/libdouble/: sub_double.cpp
Assignments/cross_compiling_pt_3/libint/: libint_instructions.md  mul_int.c  sub_int.c
Quizzes/: Pre-req_quiz.c
